manifest/ai.yaml
# 08-ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-ai
  template:
    metadata:
      labels:
        app: sensor-ai
    spec:
      nodeSelector:
        node-role: ai
      containers:
        - name: sensor-ai
          image: sensor-ai:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: model-ram-storage
              mountPath: /app/temp_models
            - name: model-disk-storage
              mountPath: /app/models
          resources:
            requests:
              cpu: "1000m"
              memory: "1Gi"
            limits:
              cpu: "4000m"
              memory: "4Gi"
      volumes:
        - name: model-ram-storage
          emptyDir:
            medium: Memory
        - name: model-disk-storage
          persistentVolumeClaim:
            claimName: ai-model-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sensor-ai-svc
spec:
  selector:
    app: sensor-ai
  ports:
    - port: 8002 # 🌟 포트 수정
      targetPort: 8002
---
