manifest/emulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-emulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-emulator
  template:
    metadata:
      labels:
        app: sensor-emulator
    spec:
      nodeSelector:
        node-role: edge
      containers:
        - name: sensor-emulator
          image: sensor-emulator:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              hostPort: 8000 # 🌟 치트키: Agent-3의 8000번 트래픽을 이 파드로 직행시킵니다.
---
apiVersion: v1
kind: Service
metadata:
  name: emulator-svc
spec:
  # type: NodePort 부분을 완전히 삭제합니다. (기본 내부 통신용으로 둡니다)
  selector:
    app: sensor-emulator
  ports:
    - port: 8000
      targetPort: 8000
