manifest/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      nodeSelector:
        node-role: data # 🌟 Data 노드 지정
      containers:
        - name: influxdb
          image: influxdb:2.7 # 공식 이미지 사용
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-storage
              mountPath: /var/lib/influxdb2
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: influxdb-storage
          persistentVolumeClaim:
            claimName: influxdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-svc
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
