manifest/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      nodeSelector:
        node-role: data # 🌟 Data 노드 지정
      containers:
        - name: mariadb
          image: mariadb:10.11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
            - name: init-sql-volume
              mountPath: /docker-entrypoint-initdb.d
          resources:
            limits:
              memory: "800Mi"
              cpu: "500m"
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: init-sql-volume
          configMap:
            name: mariadb-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
